[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyter_theme_builder/labextension/static/style.js"]
ensured-targets = ["jupyter_theme_builder/labextension/static/style.js", "jupyter_theme_builder/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyter_theme_builder/labextension/**", "yarn.lock", ".*", "package-lock.json"]
